# cacfinaltp

./: .env  Dockerfile  build.sh  docker-compose.yml  pyproject.toml  render.yaml
admin/: Dockerfile  package-lock.json  package.json  vite.config.js.timestamp-1720640431530-f527511a19c79.mjs
admin/src/: App.jsx  index.css
admin/src/assets/: assets.js
admin/src/components/NavBar/: NavBar.css  NavBar.jsx
admin/src/components/SideBar/: SideBar.css  SideBar.jsx
admin/src/pages/Add/: Add.css  Add.jsx
admin/src/pages/List/: List.css  List.jsx
backend/: .env.example  Dockerfile  app.py  create_db.sql  data.json  database.py  gconfig.py  render.yaml  requirements.txt  serve.py
backend/pages/: form.html  sobrenosotros.html  tienda.html
backend/templates/bebidas/: index.html
frontend/: Dockerfile  front.js
frontend/js/: ageVerification.js  login.js  main.js  registration.js
