[tool.poetry]
name = "trabajofinalcodoacodo"
version = "0.1.0"
description = ""
authors = ["Martin <martin_dotto@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-cors = "^4.0.1"
flask-mysqldb = "^2.0.0"
gunicorn = "^22.0.0"
psycopg2-binary = "^2.9.9"
pydantic-settings = "^2.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
